@@ -66,6 +66,9 @@ void addNormalCoords(pybind11::module_& m) {
         .def("couldBeVertexLink", &NormalEncoding::couldBeVertexLink)
         .def("couldBeNonCompact", &NormalEncoding::couldBeNonCompact)
         .def("withTriangles", &NormalEncoding::withTriangles)
+        .def("withoutTriangles", &NormalEncoding::withoutTriangles)
+        .def("withOctagons", &NormalEncoding::withOctagons)
+        .def("withoutOctagons", &NormalEncoding::withoutOctagons)
         .def("intValue", &NormalEncoding::intValue)
         .def_static("fromIntValue", &NormalEncoding::fromIntValue)
         .def(pybind11::self + pybind11::self)
